syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ridhwan90/Golang-grpc/pb";

message UserPassword {
    string id = 1;
    string user_uuid = 2;
    string site = 3;
    string site_username = 4;
    string site_email = 5;
    string generated_password = 6;
    google.protobuf.Timestamp created_at = 7;
}

message ListUserPassword {
    repeated UserPassword user_password =1;
}

message UsernameParams {
    string username = 1;
}